[package]
name = "breed_die_repeat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = "0.8.1"
bevy_rapier3d = {version = "0.17.0", features= ["debug-render", "parallel", "enhanced-determinism"]}
bevy-inspector-egui = "0.13.0"
rand = "0.8.5"